# sf-llm-stack-hackathon

./: .env.sample  README.md  pyproject.toml
app/: app.py  indexing.py  prompts.py
data/: .gitignore  LICENSE.txt  questions_list.csv  result_list.csv
notebooks/: 0.0.1-sample-LLM-Stack-Hackathon-Starter.ipynb  1.0.0-han-langchain-indexing.ipynb  1.0.1-han-langchain-qa.ipynb  2.0.0-han-analytics.ipynb
