[tool.poetry]
name = "sf-llm-stack-hackathon"
version = "0.1.0"
description = ""
authors = ["leehanchung <lee.hanchung@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "sf_llm_stack_hackathon"}]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.23.1"
langchain = "^0.0.189"
streamlit = "^1.23.1"
python-dotenv = "^1.0.0"
openai = "^0.27.7"
redis = "^4.5.5"
gdown = "^4.7.1"
tiktoken = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
